...
            MaterialTheme.colorScheme.outlineVariant
        }

    Column(
        modifier =
            modifier
                .testTagResourceId("thread_item")
                .fillMaxWidth()
                .clip(RoundedCornerShape(8.dp))
                .background(backgroundColor)
                .border(
                    width = 1.dp,
                    color = borderColor,
...
