...
        } else {
            LazyColumn(
                state = listState,
                reverseLayout = true,
                modifier =
                    Modifier
                        .testTagResourceId("message_list")
                        .fillMaxSize(),
                contentPadding = PaddingValues(vertical = 16.dp),
            ) {
                if (isLoading) {
                    item {
                        Box(
...
